<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.khairul.consumergithubapp.model.GithubUserModel" />
    </data>

    <androidx.cardview.widget.CardView
        style="@style/Theme.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:ignore="UnusedAttribute">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/list_avatarUrl"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@android:color/darker_gray"
                android:transitionName="imageView_trans"
                app:avatar="@{data.avatar_url}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/list_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:text="@{String.valueOf(data.login)}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/exp_login" />

            <TextView
                android:id="@+id/repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="2dp"
                android:text="@{String.valueOf(data.public_repos)}"
                android:textColor="@color/red"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/count_following"
                tools:text="@string/repos" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:padding="0dp"
                android:text="@string/repositories"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/repositories"
                app:layout_constraintStart_toEndOf="@+id/repositories"
                app:layout_constraintTop_toTopOf="@+id/repositories"
                app:layout_constraintVertical_bias="0.55" />

            <TextView
                android:id="@+id/count_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repositories"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="2dp"
                android:text="@{String.valueOf(data.following)}"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="@string/followings" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:padding="0dp"
                android:text="@string/following"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/count_following"
                app:layout_constraintStart_toEndOf="@+id/count_following"
                app:layout_constraintTop_toTopOf="@+id/count_following" />

            <TextView
                android:id="@+id/count_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repositories"
                android:layout_marginStart="12dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="2dp"
                android:text="@{String.valueOf(data.followers)}"
                android:textColor="@color/green"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/list_login"
                tools:text="@string/follower" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:padding="0dp"
                android:text="@string/followers"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/count_followers"
                app:layout_constraintStart_toEndOf="@+id/count_followers"
                app:layout_constraintTop_toTopOf="@+id/count_followers"
                app:layout_constraintVertical_bias="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="99dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
